add and delete file update

--- a/DOM Manipulations/11_filterFunctionality/index.html
+++ b/DOM Manipulations/11_filterFunctionality/index.html
@@ -29,3 +29,8 @@
   </body>
   <script src="index.js"></script>
 </html>
+
+<script>
+  const formEl = document.querySelector("form");
+  console.log(formEl);
+</script>
